# SelfMe

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml  requirements.txt  tsconfig.base.json
apps/desktop/: electron-builder.config.mjs  index.html  package.json  tsconfig.node.json  vite.config.ts
apps/gateway/: package.json
apps/tui/: package.json  tsconfig.json
apps/tui/src/: app.tsx  (+1 more)
apps/web/: next.config.mjs  package.json  tsconfig.json
docs/: agent-cli-roadmap.html  cli-architecture.html  phase-0-checklist.md
docs/notes/: agent-cli-roadmap.html  agent-eval-strategy.html  runtime-resume-scenario-matrix.md
scripts/smoke/: gateway-smoke.mjs  mock-openai.mjs
selfme/: __init__.py  __main__.py  cli.py  config.py  web_cli.py
selfme/core/: __init__.py  llm.py  memory.py
selfme/desktop/: README.md  build.bat  build.sh  config.json  icon.icns  main.js  package.json  preload.js
selfme/gateway/: __init__.py  app.py  manager.py  session.py
selfme/tui/: __init__.py  app.py  chat.py  client.py  styles.py  widgets.py
selfme/web/: __init__.py  app.py
src/: index.ts
src/app/: bootstrap.ts  lifecycle.ts
src/eval/: agent-eval.ts  eval-regression.ts  runner.ts  suite.ts  types.ts
src/runtime/: agent.ts  commands.ts  context-compaction.ts  events.ts  task-intent.ts
src/smoke/: agent-regression.ts
src/storage/: logs.ts
src/terminal/: event-loop.ts  layout.ts  linear-renderer.ts  message-types.ts  panel-controller.ts  renderer.ts
src/tools/: files.ts  registry.ts  shell.ts
src/types/: events.ts  task.ts  tool.ts
(+35 files in other folders)
